# json_to_ical

./: CMakeLists.txt  README.md
examples/: multiple_events.json  single_event.json
include/: json_to_ical.h
src/: json_to_ical.cpp  main.cpp
test/data/: single_event.json
